<resources>
    <string name="app_name">CFL Dairy Sales</string>
    <string name="intro_2_string">You can view the dairy farmers registered onboard</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="intro_1_string">Canaan Dairy allows you to operate your dairy farm account records straight from your mobile.</string>
    <string name="intro_3_string">You can check on milk records produced by farmers</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_your_password"><u>Forgot your Password ?</u></string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an Account ?</string>
    <string name="need_help_with_your_password">Need help with your password ?</string>
    <string name="send">Send</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="welcome_user_please_fill_the_details_below">Welcome User Please fill the details below</string>
    <string name="first_name">First Name</string>
    <string name="other_name">Other Name</string>
    <string name="surname">Surname</string>
    <string name="nationality">Nationality</string>
    <string name="mobile_number">Mobile Number +254</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">e-mail address</string>
    <string name="date_of_birth">D.O.B</string>
    <string name="id_number">ID/Passport Number</string>
    <string name="verifying_your_account">Verifying your account details and creating for you an account.</string>
    <string name="sec">sec</string>
    <string name="terms"><u><![CDATA[By using this app, you agree to the Terms & Conditons]]></u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="web_portal">Web Portal</string>
    <string name="help"><![CDATA[Help & Feedback]]></string>
    <string name="logout">Log Out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_data">Registration Data</string>
    <string name="milk_records">Milk Records</string>
    <string name="registration_overview">Sales Overview</string>
    <string name="total_farmers">Total Farmers</string>
    <string name="new_farmers">New Farmers</string>
    <string name="todays_summary">Today\'s Summary</string>
    <string name="total_litres">Total Litres</string>
    <string name="accepted_litres">Accepted Litres</string>
    <string name="rejected_litres">Rejected Litres</string>
    <string name="main_menu">Main Menu</string>
    <string name="reports">Reports</string>
    <string name="factory">Factory</string>
    <string name="driver">Driver</string>
    <string name="grader">Grader</string>
    <string name="milk_station">Milk Station</string>
    <string name="settings">Settings</string>
    <string name="report_module">Report Module</string>
    <string name="notifications">Notifications</string>
    <string name="specify_criteria">Specify Criteria</string>
    <string name="choose_parameters">Choose Parameters</string>
    <string name="select_station">Station</string>
    <string name="select_farmer">Farmer</string>
    <string name="to_date">Date To</string>
    <string name="from_date">Date From</string>
    <string name="generate_report">Generate Report</string>
    <string name="farmer_names">Farmer\'s names</string>
    <string name="date">Date</string>
    <string name="lit_accept">Litres Accepted</string>
    <string name="lit_reject">Litres Rejected</string>
    <string name="select_parameter">Select Parameter</string>
    <string name="centre">Centre</string>
    <string name="station">Station</string>
    <string name="farmer">Farmer</string>
    <string name="select_parameters">Select Parameters</string>
    <string name="drag_to_select_period">Drag to select Period</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="centre_breeders">Centre Breeders</string>
    <string name="farmer_names_underline"><u><![CDATA[Farmer\'s Names]]></u></string>
    <string name="accepted_litres_underline"><u>Accepted Litres</u></string>
    <string name="rejected_litres_underline"><u>Rejected Litres</u></string>
    <string name="give_a_receipt">GIVE A RECEIPT</string>
    <string name="transporter_names">Transporter Names</string>
    <string name="milk_test">Milk Test</string>
    <string name="transporter_info">Transporter Information</string>
    <string name="user">User</string>
    <string name="organoleptic">Organoleptic</string>
    <string name="fail">Fail</string>
    <string name="pass">Pass</string>
    <string name="alcohol">Alcohol</string>
    <string name="measurement_of_lactometre"><u>Measurement of Lactometer</u></string>
    <string name="lactometer">Lactometer</string>
    <string name="litre">Litre</string>
    <string name="bc_number">BC Number</string>
    <string name="canter_chamber">Canter Chamber</string>
    <string name="save">Save</string>
    <string name="add_new_record">Add new record</string>
    <string name="machine_measurements">Machine Measurements</string>
    <string name="start">Start</string>
    <string name="make_order">Make Order</string>
    <string name="orders">Orders</string>
    <string name="order_no">Order No</string>
    <string name="select_item">Select Item</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="ordered_via">Ordered Via</string>
    <string name="place_order">Place Order</string>
    <string name="buyer_register">Register Buyer</string>
    <string name="purchase_order">Purchase Order</string>
    <string name="selected_items">Selected Items for Order</string>
</resources>
