<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/toolbar_gradient">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:padding="14dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/gotham_rounded" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome_user_please_fill_the_details_below"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/first_name"
        android:inputType="text"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/other_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/other_name"
        android:inputType="text"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/other_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/surname"
        android:inputType="text"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/surname"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/nationality"
        android:inputType="text"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nationality"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />
</RelativeLayout>