<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mobile_number"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:text="@string/need_help_with_your_password"
        android:textColor="@color/colorDarkBlue"
        android:textSize="30sp"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="55dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="center"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/mobile_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background2"
        android:text="@string/send"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/colorDarkGreen"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background2"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />
</RelativeLayout>