<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/toolbar_gradient">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:padding="14dp"
            app:srcCompat="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:fontFamily="@font/gotham_rounded" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/welcome_user_please_fill_the_details_below"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/id_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/id_number"
        android:inputType="number"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/date_of_birth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/date_of_birth"
        android:inputType="date"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_of_birth"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorDarkBlue"
        android:gravity="start"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingBottom="20dp"
        android:textColorHint="@color/colorDarkBlue"
        app:fontFamily="@font/gotham_rounded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:fontFamily="@font/gotham_rounded" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/colorDarkGreen"
            android:textSize="16sp"
            app:fontFamily="@font/gotham_rounded" />
    </LinearLayout>
</RelativeLayout>