<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sign_in_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/sign_in_gradient" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="230dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/phone_number_icon"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/phone_number_icon"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/phone_number"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/password_icon"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/password"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/forgot_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background2"
        android:text="@string/sign_in"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up"
        android:layout_centerInParent="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_background2"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

</RelativeLayout>