<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="@string/order_no"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/order_no_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="A01103567"
            android:textColor="@color/blackColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_no_txt"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="@string/select_item"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <ListView
            android:id="@+id/items_list_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/text_view2"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/colorGrey"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/text_view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/items_list_view"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="@string/delivery_date"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/delivery_date_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view3"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="10/11/2018"
            android:textColor="@color/blackColor"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/text_view4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/delivery_date_txt"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="@string/ordered_via"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/ordered_through"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view4"
            android:layout_margin="5dp"
            android:fontFamily="@font/gotham_rounded"
            android:text="Sales Guy One"
            android:textColor="@color/blackColor"
            android:textSize="16sp" />

        <Button
            android:id="@+id/place_order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ordered_through"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button_background2"
            android:fontFamily="@font/blueberry_milk"
            android:text="@string/place_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="21sp" />
    </RelativeLayout>
</ScrollView>