<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/verifying_your_account"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:visibility="visible"
        app:indicatorColor="@color/colorDarkBlue"
        app:indicatorName="LineSpinFadeLoaderIndicator" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loading"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="0:30"
        android:textColor="@color/colorDarkBlue"
        android:textSize="22sp"
        app:fontFamily="@font/gotham_rounded" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timer"
        android:gravity="center"
        android:text="@string/sec"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16sp"
        app:fontFamily="@font/gotham_rounded" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/terms"
        android:textColor="@color/colorDarkBlue"
        android:textSize="12sp"
        android:textStyle="bold"
        app:fontFamily="@font/gotham_rounded" />

</RelativeLayout>